--- a/portfolio.html
+++ b/portfolio.html
@@ -18,39 +18,44 @@
     <main class="main">
         <!-- landing page -->
         <div class="first">
+            <label for="logo"><i class="fa fa-bars fa-4x" aria-hidden="true" class="logo"></i></label>
             <div class="menu">
-                <div class="logo"><i class="fa fa-user-circle-o fa-4x" aria-hidden="true"></i>
+                <!-- <div class="logo"><i class="fa fa-bars fa-4x" aria-hidden="true" class="logo"></i> -->
+                <input type="checkbox" id="logo">
+                <div class="slidepage">
+                    <a href="#aboutt">
+                        <h4 class="about">AboutME
+                    </a></h4>
+                    <a href="#edu">
+                        <h4>Education
+                    </a></h4>
+                    <a href="#work">
+                        <h4>Work-Experience
+                    </a></h4>
+                    <a href="#cont">
+                        <h4>Contact
+                    </a></h4>
+
                 </div>
-                <a href="#aboutt">
-                    <h4 class="about">AboutME
-                </a></h4>
-                <a href="#edu">
-                    <h4>Education
-                </a></h4>
-                <a href="#work">
-                    <h4>Work-Experience
-                </a></h4>
-                <a href="#cont">
-                    <h4>Contact
-                </a></h4>
-            </div>
-            <div class="title">
-                <div class="main-title">
-                    <h1>Ashenafi SHIFERAW</h1>
-                </div>
-                <div class="sub-title">
-                    <h4>Motivated web developer</h4>
-                </div>
-            </div>
-            <div class="icons">
-                <a href="https://github.com/Melkam22?tab=repositories" target="_blank"><i class="fa fa-github fa-3x"
-                        aria-hidden="true" id="ione"></a></i>
-                <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fa fa-linkedin-square fa-3x"
-                        aria-hidden="true" id="itwo"></a></i>
-                <a href="file:///home/dci-l110/BackupAllFolders/HTML-CSS-JS/classWorkWebDev/Browser/reactprojects/cvAshu/cv.html"
-                    target="_blank"><i class="fa fa-envelope fa-3x" aria-hidden="true" id="ithree"></a></i>
             </div>
         </div>
+        <div class="title">
+            <div class="main-title">
+                <h1>Ashenafi SHIFERAW</h1>
+            </div>
+            <div class="sub-title">
+                <h4>Motivated web developer</h4>
+            </div>
+        </div>
+        <div class="icons">
+            <a href="https://github.com/Melkam22?tab=repositories" target="_blank"><i class="fa fa-github fa-3x"
+                    aria-hidden="true" id="ione"></a></i>
+            <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fa fa-linkedin-square fa-3x"
+                    aria-hidden="true" id="itwo"></a></i>
+            <a href="file:///home/dci-l110/BackupAllFolders/HTML-CSS-JS/classWorkWebDev/Browser/reactprojects/cvAshu/cv.html"
+                target="_blank"><i class="fa fa-envelope fa-3x" aria-hidden="true" id="ithree"></a></i>
+        </div>
+
 
         <!-- second page -->
         <div class="aboutme" id="aboutt">
@@ -62,7 +67,7 @@
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">AboutMe</h5>
+                            <h3 class="card-title">AboutMe</h3>
                             <p class="card-text"> I am Ashenafi SHIFERAW. I was born in 1983. I am
                                 studying and practising web-development since October 2018. I have
                                 a very good knowledge of html, css and sass, bootstrap, Java-Script,
@@ -74,14 +79,14 @@
                                 and translator in different local and international organizations.
                             </p>
                             <button id="aboutmebtn">To full-page</button>
-                            <a href="#" class="btn btn-primary">Download CV</a>
+                            <a href="#" class="btn btn-primary" id="down">Download CV</a>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="skills">
-                <h5>Skills</h5>
+                <h3>Skills</h3>
                 <box1>
                     <h3>HTML 100% </h3>
                 </box1>
