final version of cv

--- a/cv.html
+++ b/cv.html
@@ -23,12 +23,12 @@
         <div class="aboutmebox">
             <div class="aboutme">
                 <h2 class="h2">About Me:</h2>
-                <p class="p">I am a web developer with some experience. I was enrolled
+                <p class="p">I am a web developer with good experience. I was enrolled
                     in an intensive one year web development course. Through
                     out my study, I was using different technologies and currently,
-                    I have mastered multitudes of programing languages and
-                    frameworks. In my previous work life, I was a french language
-                    teacher and Translator with more than 7 years of job experience.
+                    I have mastered a multitude of programing languages and
+                    frameworks. In my previous work experience, I was a french language
+                    teacher and translator with more than 7 years of job experience.
                 </p>
             </div>
             <div class="technologies">
@@ -39,10 +39,8 @@
                     <p class="p-li">- html, - css, - scss, - java-script,
                         - j-query, - react, - node.js, - mongodb ...
                     </p>
-
                 </p>
             </div>
-
         </div>
 
         <!-- the two big boxes, reach me & all content -->
@@ -51,10 +49,10 @@
                 <h1 class="contact-info">Contact Info:</h1>
                 <p class="phone">
                     <i class="fa fa-volume-control-phone" aria-hidden="true"></i></p>
-                <p class="tele-number">+4915734924957</p>
+                <p class="tele-number">030/98411153</p>
                 <p class="globe">
                     <i class="fa fa-globe" aria-hidden="true"></i></p>
-                <p class="address">Pettenkofer str. 3 <br>
+                <p class="address">PettenkoferStr. <br>
                     Berlin, <br>
                     Germany </p>
                 <p class="envelop">
@@ -67,7 +65,7 @@
                 <p class="linked">
                     <i class="fa fa-linkedin-square" aria-hidden="true"></i></p>
                 <p class="linked-address">
-                    LinkedIn link</p>
+                    www.linkedin.com/in/ashenafi-shiferaw-webDevelopment</p>
             </div>
             <!-- professional experience -->
             <div class="professional">
@@ -91,8 +89,7 @@
                     <h5><strong>08/2014 – 09/2014</strong> Alliance Française de Nairobi; Nairobi, Kenya Instructor/
                         Trainer</h5>
                     <p class="teaching-list2">
-                        - Providing an online training to French language teachers on French distance
-                        teaching
+                        - Providing an online training to French language teachers on French distance teaching
                     </p>
                 </div>
                 <h2>Education</h2>
