--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
                     aria-hidden="true" id="ione"></a></i>
             <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fa fa-linkedin-square fa-3x"
                     aria-hidden="true" id="itwo"></a></i>
-            <a href="file:///home/dci-l110/BackupAllFolders/HTML-CSS-JS/classWorkWebDev/Browser/reactprojects/cvAshu/cv.html"
+            <a href="file:///home/dci-pc-ubuntu55/portfoliosite/portfolioweb/cv.html"
                 target="_blank"><i class="fa fa-envelope fa-3x" aria-hidden="true" id="ithree"></a></i>
         </div>
 
@@ -68,39 +68,35 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h3 class="card-title">AboutMe</h3>
-                            <p class="card-text"> I am Ashenafi SHIFERAW. I was born in 1983. I am
-                                studying and practising web-development since October 2018. I have
-                                a very good knowledge of html, css and sass, bootstrap, Java-Script,
-                                react and I have a good understanding of backend technologies such as
-                                node.js, mongoDB, mysql, express etc. In my pre-web development experience,
-                                I have studied Banking and Finance I have studied foreign-language and
-                                pedagogie and I have accomplished my master studies in Rouen, France by the
-                                end of 2011. Since then till 2018, I have worked as a French language teacher
-                                and translator in different local and international organizations.
+                            <p class="card-text"> I am Ashenafi SHIFERAW. I was born in 1983 in Addis Ababa, Ethiopia. Currently, I am Berlin based and I am studying and practicing web-development since October 2018. I have a very good knowledge of HTML, 
+                            SCC and SASS, BOOTSTRAP, JAVA-SCRIPT, REACT and I also have a good understanding 
+                            of backend technologies such as NODE.JS, mongoDB, MYSQL, EXPRESS etc.
+                            In my pre-web development experience, I studied Banking and Finance and French language & communication and pedagogy and hold a Master’s degree from Rouen 
+                            University in France. I have several years of working experience as a French 
+                            language teacher and translator in different local and international organizations.
                             </p>
                             <button id="aboutmebtn">To full-page</button>
-                            <a href="#" class="btn btn-primary" id="down">Download CV</a>
+                            <a href="https://melkam22.github.io/resume/" target="_blank" class="btn btn-primary" id="down">Download CV</a>
                         </div>
                     </div>
                 </div>
             </div>
-
             <div class="skills">
                 <h3>Skills</h3>
                 <box1>
-                    <h3>HTML 100% </h3>
+                    <h4>HTML 100% </h4>
                 </box1>
                 <box2>
-                    <h3>CSS, Bootstrap 85%</h3>
+                    <h4>CSS, Bootstrap 85%</h4>
                 </box2>
                 <box3>
-                    <h3>Java-Script, React 80%</h3>
+                    <h4>Java-Script, React 80%</h4>
                 </box3>
                 <box4>
-                    <h3>Express, Node.js 70%</h3>
+                    <h4>Express, Node.js 70%</h4>
                 </box4>
                 <box5>
-                    <h3>MongoDB, SQL 60%</h3>
+                    <h4>MongoDB, SQL 60%</h4>
                 </box5>
             </div>
         </div>
@@ -109,17 +105,9 @@
             <div class="general-education">
                 <h3>General-Education</h3>
                 <p>
-                    After high school I was enrolled in Addis-Ababa University school
-                    of Commerce and I was graduated in 2004 with Diploma in Banking and
-                    Finance. After that, I have pursue my higher eduction and I have
-                    studied foreign-language and communication in French language and
-                    and I was graduated with distinction in 2009. After acquiring my
-                    degree I had won a scholarship and I have studied my master degree
-                    in France at the University of Rouen. I have graduated in end of
-                    2011 in Teaching French as a Foreign Language. Since then until
-                    I have started my web development course I have worked as a french
-                    language teacher and translator in different local and international
-                    organizations, including Addis-Ababa University and African-Union.
+                        I graduated with a Diploma in Banking and Finance from Addis Ababa University School of
+                        Commerce in 2004. I continued my education with a Bachelor in French language and
+                        communication at Addis Ababa University from which I graduated with distinction in 2009. Being awarded with a French government funded scholarship, I continued studying Teaching French as a foreign language. I graduated with a Masters from the University of Rouen in France in 2011. For several years I worked as French language teacher and translator in various local and international organizations, including Addis Ababa University, Alliance-francaise, the African Union and I delivered private & group courses in the German GIZ, the Ministry of Foreign Affairs in Addis etc. And, private contract translation works with UNESCO and many other organizations.
                 </p>
                 <button id="edubtn">To full-page</button>
                 <!-- <a href="#" class="btn btn-primary" id="edubtn">Full-page</a> -->
@@ -127,35 +115,18 @@
             <div class="web-related">
                 <h3>Web-Related Education</h3>
                 <p>
-                    Since, I have a big interest in it and web-development I have
-                    enrolled in a one month orientation course in DCI in august 2018.
-                    Then, without wasting any time, I pursue my one year program in
-                    the same institute and since then I have learned and I am learning
-                    a lot. During my time in DCI, I have learned and used many technologies
-                    with which I have managed to make web-sites and many small apps.
-                    I have learned many technologies and due to time constraints I didn't
-                    manage to apply all of them, but considering my high motivation and
-                    insatiable interest for programming, I am looking forward to join
-                    a company and apply what I have learned and to learn more in order to
-                    to broaden my knowledge and to code more amazing apps.
+                        I joined DCI (Digital Career Institute) in August 2018 to start my web-development education. I have learned and I am still learning a lot on daily basis. I learned and used many programming languages and libraries such as HTML, SCC, SASS, BOOTSTRAP, JAVA-SCRIPT, REACT, NODE.JS, mongoDB, MYSQL, EXPRESS etc. which I used to make websites and small apps. I already practiced a variety of technologies and am highly motivated for and interested in programming. I am therefore looking forward to joining a company and apply what I have already leaned and continue to learn more. I am eager to broaden my knowledge every day and to code amazing apps.
                 </p>
                 <button id="relatedbtn">To full-page</button>
                 <!-- <a href="#" class="btn btn-primary">Full-page</a> -->
             </div>
         </div>
-
         <!-- fourth page -->
         <div class="work" id="work">
             <div class="work-experience">
                 <h3>Previous Work-Experience</h3>
                 <p>
-                    As a teacher and a translator, I have worked in various organizations,
-                    and I have worked as well with people from different age group,
-                    educational background and different nationalities too. This experience
-                    has given me a precious opportunity to learn and develop intercultural
-                    competenties. Beside the intercultural aspect, this experience has given
-                    me a great opportunity to develop my self confidence in public speech,
-                    group-working, brainstorming and collectively solving problems.
+                        As a teacher and a translator, I worked in various organizations and with people from different age groups, educational backgrounds and different nationalities. My intercultural communication skills and my intercultural sensitivity was a great advantage for this task. Furthermore I developed and applied my self-confidence in public speech, group-working, brainstorming and collective problem solving.
                 </p>
                 <button id="workbtn">To full-page</button>
                 <!-- <a href="#" class="btn btn-primary">Full-page</a> -->
@@ -163,15 +134,9 @@
             <div class="web-experience">
                 <h3>web-related Experience</h3>
                 <p>
-                    Though I am novice to the web-development domain and my experience
-                    is very small, I have managed to learn as much as possible during
-                    my stay at school and I have managed as well to apply as much as
-                    possible what I have learned during my stay at school. Without limiting
-                    myself to my teachers, I was learning a lot from various sources and I
-                    am always eager to apply new things. With what I learned, I have
-                    managed to make different web-sites and various mini apps which
-                    could perform various functions. Furthermore, I am eager to join motivated
-                    and motivating team and accomplish more nice things.
+                        I managed to learn a lot during my one year stay at DCI and I have already applied much of the coding technics that I learned. I am learning a lot from different sources and I am always eager to apply new things. I managed to make different web-sites and various mini apps which could perform various functions. I invite you to see my portfolio here:
+                        Furthermore, I am eager to build on my experience and join a motivated and motivating team and accomplish more nice things together. 
+                        <h7>Some from deployed works</h7>
                 </p>
                 <button id="workbtn1">To full-page</button>
                 <!--  <a href="#" class="btn btn-primary">Full-page</a> -->
@@ -199,10 +164,8 @@
 
 
         <p class="copyright"><i class="fa fa-copyright" aria-hidden="true"></i>
-            Copyright Ashenafi 2019</p>
+            Copyright Melkam 2019</p>
     </main>
-
-
 
 
     <script src="portfolio.js"></script>
