--- a/cv.html
+++ b/cv.html
@@ -61,11 +61,11 @@
                 <p class="github">
                     <i class="fa fa-github" aria-hidden="true"></i></p>
                 <p class="github-link">
-                    https://github.com/Melkam22?tab=repositories</p>
+                    <a href="https://github.com/Melkam22?tab=repositories" target="_blank">Repository</a></p>
                 <p class="linked">
                     <i class="fa fa-linkedin-square" aria-hidden="true"></i></p>
                 <p class="linked-address">
-                    www.linkedin.com/in/ashenafi-shiferaw-webDevelopment</p>
+                    <a href="https://www.linkedin.com/m/login/" target="_blank">Linkedin</a></p>
             </div>
             <!-- professional experience -->
             <div class="professional">
