--- a/portfolio.html
+++ b/portfolio.html
@@ -136,8 +136,13 @@
                 <p>
                         I managed to learn a lot during my one year stay at DCI and I have already applied much of the coding technics that I learned. I am learning a lot from different sources and I am always eager to apply new things. I managed to make different web-sites and various mini apps which could perform various functions. I invite you to see my portfolio here:
                         Furthermore, I am eager to build on my experience and join a motivated and motivating team and accomplish more nice things together. 
-                        <h7>Some from deployed works</h7>
                 </p>
+                <h7>Links to few deployed works</h7> 
+                    <li class="li"><a href="https://melkam22.github.io/TodoList-React/." target="_blank">Todo list with react:</a></li>
+                    <li class="li"><a href="https://melkam22.github.io/weather-app-react/" target="_blank">Weather-app-react:</a></li>
+                    <li class="li"><a href="https://melkam22.github.io/Sign-my-Petition/#/" target="_blank">Sign-up Petition:</a></li>
+                    <li class="li"><a href="https://melkam22.github.io/tic-tac-toe/" target="_blank"> Tic-tac-toe game:</a></li>
+                <br>
                 <button id="workbtn1">To full-page</button>
                 <!--  <a href="#" class="btn btn-primary">Full-page</a> -->
             </div>
