cvs excluded with javascript

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,9 +52,14 @@
                     aria-hidden="true" id="ione"></a></i>
             <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fa fa-linkedin-square fa-3x"
                     aria-hidden="true" id="itwo"></a></i>
-            <a href="file:///home/dci-pc-ubuntu55/portfoliosite/portfolioweb/cv.html"
-                target="_blank"><i class="fa fa-envelope fa-3x" aria-hidden="true" id="ithree"></a></i>
+            <!-- <a href="file:///home/dci-pc-ubuntu55/portfoliosite/portfolioweb/cv.html"
+                target="_blank"><i class="fa fa-envelope fa-3x" aria-hidden="true" id="ithree"></a></i> -->
+            <button id="ithree"><i class="fa fa-envelope fa-3x" aria-hidden="true"></a></i></button>
         </div>
+        <div class="digitalCv-absent">
+            <div class="close-myBox">X</div>
+        Sorry, my digital-cv is Currently unavailable!
+    </div>
 
 
         <!-- second page -->
@@ -68,7 +73,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h3 class="card-title">AboutMe</h3>
-                            <p class="card-text"> I am Ashenafi SHIFERAW. I was born in 1983 in Addis Ababa, Ethiopia. Currently, I am Berlin based and I am studying and practicing web-development since October 2018. I have a very good knowledge of HTML, 
+                            <p class="card-text"> I am Ashenafi SHIFERAW. I was born in Addis-Ababa, Ethiopia. Currently, I am Berlin based and I am studying and practicing web-development since October 2018. I have a very good knowledge of HTML, 
                             SCC and SASS, BOOTSTRAP, JAVA-SCRIPT, REACT and I also have a good understanding 
                             of backend technologies such as NODE.JS, mongoDB, MYSQL, EXPRESS etc.
                             In my pre-web development experience, I studied Banking and Finance and French language & communication and pedagogy and hold a Master’s degree from Rouen 
@@ -76,10 +81,15 @@
                             language teacher and translator in different local and international organizations.
                             </p>
                             <button id="aboutmebtn">To full-page</button>
-                            <a href="https://melkam22.github.io/resume/" target="_blank" class="btn btn-primary" id="down">Download CV</a>
+                            <button id="cv-button">Download CV</button>
+                            <!-- <a href="" class="btn btn-primary" id="down">Download CV</a> -->
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="cv-absent">
+                    <div class="close-box">X</div>
+                sorry, pdf-formated cv is Currently unavailable!
             </div>
             <div class="skills">
                 <h3>Skills</h3>
