change on main-title style

--- a/portfolio.html
+++ b/portfolio.html
@@ -150,7 +150,7 @@
                 <h7>Links to few deployed works</h7> 
                     <li class="li"><a href="https://melkam22.github.io/TodoList-React/." target="_blank">Todo list with react:</a></li>
                     <li class="li"><a href="https://melkam22.github.io/weather-app-react/" target="_blank">Weather-app-react:</a></li>
-                    <li class="li"><a href="https://melkam22.github.io/Sign-my-Petition/#/" target="_blank">Sign-up Petition:</a></li>
+                    <li class="li"><a href="https://melkam22.github.io/Sign-my-Petition/" target="_blank">Sign-up Petition:</a></li>
                     <li class="li"><a href="https://melkam22.github.io/tic-tac-toe/" target="_blank"> Tic-tac-toe game:</a></li>
                 <br>
                 <button id="workbtn1">To full-page</button>
