tic-tac-toe changed to shopping cart

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <li class="li"><a href="https://melkam22.github.io/TodoList-React/." target="_blank">Todo list with react:</a></li>
                     <li class="li"><a href="https://melkam22.github.io/weather-app-react/" target="_blank">Weather-app-react:</a></li>
                     <li class="li"><a href="https://melkam22.github.io/Sign-my-Petition/" target="_blank">Sign-up Petition:</a></li>
-                    <li class="li"><a href="https://melkam22.github.io/tic-tac-toe/" target="_blank"> Tic-tac-toe game:</a></li>
+                    <li class="li"><a href="https://melkam22.github.io/shoppingWithJavaScript/index.html" target="_blank"> Shopping-cart with javascript:</a></li>
                 <br>
                 <button id="workbtn1">To full-page</button>
                 <!--  <a href="#" class="btn btn-primary">Full-page</a> -->
